sumo/tests/traci/ChangeLane/InvalidLaneId/testclient_out.traci
TraCITestClient output file. Date: Tue Feb 03 22:52:38 2009


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1 2D-Position: x=0 y=491.75

-> Command sent: <ChangeLane>:
  NodeId=0 LaneId=100 fixTime=1
.. Answered with error to command (19), [description: No lane existing with given id on the current road]

-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1 2D-Position: x=0.44767 y=491.75

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
